# edjas-demo

./: .gitignore  Makefile  README.md  demo_data.xlsx  edjas_demo.py  hubris_demo.py  levels_sample.xlsx  pyproject.toml  serve.py
data/: demo_data.xlsx
docs/: dataflow.html  dataflow.md
docs/images/: demo_process.drawio
pages/: json_page.html  upload_data_page.html  upload_page.html  upload_template_page.html
pug/: text_styles1.pug  text_styles2.pug
scripts/: add_occupation.py  make_levels_sample.py  nest_version.py
sets/default/: dashboard.html  index.html
templates/: dashboard.html  index.html  levels.html  simple.html
tests/: conftest.py  test_dashboard_render.py  test_index.py  test_levels_author.py  test_levels_render.py  test_version.py
tests/templates/: test_template_unpacking.txt
