[project]
name = "hubris-demo"
version = "0.1.0"
description = "Demonstration web site for Hubris"
authors = [
    {name = "Steve Holden",email = "steve@holdenweb.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja-cli (>=1.2.2,<2.0.0)",
    "flask (>=3.1.0,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "hubris @ file:///Users/sholden/Projects/Python/hubris/dist/hubris-0.2.1-py3-none-any.whl",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
