[project]
name = "edjas-demo"
version = "0.4.0"
description = "Demonstration web site for EDJAS"
authors = [
    {name = "Steve Holden",email = "steve@holdenweb.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja-cli (>=1.2.2,<2.0.0)",
    "flask (>=3.1.0,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "edjas>=0.5.1",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
